--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "homepage": "",
   "repository": {},
   "dependencies": {
-    "apache-arrow": "^0.15.1",
+    "apache-arrow": "^0.16.0",
     "flumecodec": "0.0.1",
     "flumedb": "^2.1.0",
-    "flumelog-aligned-offset": "^1.1.0",
+    "flumelog-offset": "^3.4.4",
     "pull-stream": "^3.6.14",
     "ssb-ref": "^2.13.9"
   },
